--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "homepage": "https://hudi304.github.io/clujwho23",
     "name": "clujwho23",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
     "dependencies": {
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
