--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://hudi304.github.io/clujwho23",
+    "homepage": "https://hudi304.github.io/",
     "name": "clujwho23",
     "version": "0.1.0",
     "private": false,
