--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
+        "@mui/icons-material": "^5.1.1",
         "@mui/material": "^5.0.2",
         "@reduxjs/toolkit": "^1.6.0",
         "@testing-library/jest-dom": "^5.12.0",
@@ -19,6 +20,7 @@
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.1",
         "lodash": "^4.17.21",
+        "material-ui-icons": "^1.0.0-beta.36",
         "prettier": "^2.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
