--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/node": "^12.20.13",
         "@types/react": "^17.0.9",
         "@types/react-dom": "^17.0.6",
+        "@types/react-swipeable-views": "^0.13.1",
         "axios": "^0.21.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-plugin-unused-imports": "^1.1.1",
@@ -28,6 +29,7 @@
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.3",
+        "react-swipeable-views": "^0.14.0",
         "redux-saga": "^1.1.3",
         "sass": "^1.34.0",
         "styled-components": "^5.3.1",
