--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "homepage": "https://hudi304.github.io/clujwho23",
-    "name": "clujwho23",
+    "homepage": ".",
+    "name": "clujwho",
     "version": "0.1.0",
     "private": false,
     "dependencies": {
