--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
-        "@mui/icons-material": "^5.1.1",
+        "@mui/icons-material": "^5.3.1",
         "@mui/material": "^5.0.2",
         "@reduxjs/toolkit": "^1.6.0",
         "@testing-library/jest-dom": "^5.12.0",
@@ -25,6 +25,7 @@
         "prettier": "^2.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-helmet": "^6.1.0",
         "react-intersection-observer": "^8.32.1",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
@@ -64,6 +65,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-helmet": "^6.1.5",
         "@types/react-router-dom": "^5.1.7",
         "@typescript-eslint/eslint-plugin": "^3.9.0",
         "@typescript-eslint/parser": "^3.9.0",
