--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
         "lodash": "^4.17.21",
         "material-ui-icons": "^1.0.0-beta.36",
         "prettier": "^2.3.1",
+        "qrcode.react": "^3.0.0",
         "react": "^17.0.2",
+        "react-color-palette": "^6.2.0",
+        "react-color-picker": "^4.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
         "react-intersection-observer": "^8.32.1",
+        "react-qr-code": "^2.0.3",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.3",
