--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
+        "@heroicons/react": "^1.0.6",
         "@mui/icons-material": "^5.3.1",
         "@mui/material": "^5.0.2",
         "@reduxjs/toolkit": "^1.6.0",
